2002-04-04  Darin Adler  <darin@apple.com>

	Redo clobbered fixes for problems that show up only when xNDEBUG is set

	* src/kwq/KWQApplication.mm: (QApplication::sendEvent):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient IFURLHandleResourceDidBeginLoading:]):
	Remove or ifdef otherwise-unused variables.

	* src/kwq/KWQFontMetrics.mm: (_rectForString):
	Add missing semicolons.

2002-04-04  Darin Adler  <darin@apple.com>

	* src/kwq/KWQString.mm: (QString::unicode), (QString::latin1),
	(QString::convertToQCString): Remove some excessive logging that
	was getting in the way of important log messages.

2002-04-03  Richard Williamson  <rjw@apple.com>

        Added support for finalURL in data source.
        
	* src/kwq/KWQKloader.mm: (-[URLLoadClient IFURLHandle:didRedirectToURL:]):
	* src/kwq/external.h:

2002-04-03  Darin Adler  <darin@apple.com>

	* src/Makefile.am: Concatenate libwebcore.exp and libwebcoretests.exp.
	* src/libwebcore.exp: Update with exports that are needed when inlining is
        turned off.
	* src/libwebcoretests.exp: Added. Exports that we need to run the test in the
        Tests directory.
        * .cvsignore: Ignore the concatenated file.

2002-04-03  Darin Adler  <darin@apple.com>

	* src/Makefile.am: Don't strip at all if STRIP_FLAGS are empty.
	* src/kwq/qt/qtextcodec.h: Remove stray undef.

2002-04-03  Kenneth Kocienda  <kocienda@apple.com>

        Updated debugging log messages to use new varargs macros.

	* src/kwq/KWQApplication.mm: (QApplication::sendEvent),
	(QApplication::_initialize):
	* src/kwq/KWQColor.mm: (QColor::setNamedColor):
	* src/kwq/KWQComboBox.mm: (QComboBox::setCurrentItem):
	* src/kwq/KWQFont.mm: (QFont::getFont):
	* src/kwq/KWQFontMetrics.mm: (-[KWQLayoutInfo _initializeCaches]),
	(_rectForString):
	* src/kwq/KWQKHTMLPart.mm: (recursive), (KHTMLPart::write), (KHTMLPart::end),
	(KHTMLPart::nodeActivated):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient IFURLHandleResourceDidBeginLoading:]),